# flappybara

./: .gitattributes  .gitignore  CMakeLists.txt  readme.txt  todo.txt
includes/: AudioResourceManager.h  AudioResourceManager.hpp  Game.hpp  Logger.hpp  TextureResourceManager.h  TextureResourceManager.hpp  constants.h  constants.hpp  game.h  main.h  main.hpp
lib/: AudioResourceManager.cpp  AudioResourceManager.h  TextureResourceManager.cpp  TextureResourceManager.h
resources/audio/headers/: game_over_audio.h  level_complete_audio.h  score_audio.h  spring_audio.h
resources/textures/headers/: background_day_texture.h  background_night_texture.h  base_texture.h  pipe_green_texture.h  pipe_red_texture.h
src/: AudioResourceManager.cpp  Game.cpp  Logger.cpp  TextureResourceManager.cpp  game.cpp  main.cpp
